--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <span>Time: <span id="time">30</span></span>
 </div>
 
-<div id="game"></div>
+<div id="game">
+    <div id="pause">
+        <button type="button" id="restart">
+            <span>Restart<span id="restartText"></span></span>
+        </button>
+    </div>
+</div>
 
 <div class="target" id="target"></div>
 <script src="Js Scripts/script.js"></script>
